[package]
name = "simulation"
version = "0.1.0"
edition = "2024"
authors = ["Tim"]
description = "Helper to setup numerical integration simulations."
readme = "README.md"
licence = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.94"
log = {version = "0.4.22", features = ["std"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
thiserror = "2.0.6"
integrators = { git = "https://github.com/DynaClim/integrators.git" }
logout = { git = "https://github.com/timdbg/logout.git" }
sci-file = { git = "https://github.com/DynaClim/sci-file.git" }
argh = "0.1.12"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
#missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
